// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Portal > renders 1`] = `
<DocumentFragment>
  <div
    id="rmwcPortal"
  />
</DocumentFragment>
`;

exports[`withTheme > handles deprecations 1`] = `
<div>
  <div
    class="mdc-theme--primary foo"
  />
</div>
`;

exports[`withTheme > handles deprecations 2`] = `
<div>
  <div
    class="mdc-theme--on-primary"
  />
</div>
`;
